[gd_scene load_steps=11 format=3 uid="uid://7v6c3rjvvx7v"]

[ext_resource type="Shader" path="res://resources/shaders/StrokeShader.gdshader" id="1_15lrg"]
[ext_resource type="Theme" uid="uid://ddtfysfh2th3t" path="res://ui/combat_map_view_components/unit_selected_footer/CombatUnitPanelFriendly.tres" id="1_de343"]
[ext_resource type="Script" path="res://ui/combat_map_view_components/unit_selected_footer/combat_unit_panel.gd" id="1_q1fof"]
[ext_resource type="Texture2D" uid="uid://dhjpwrse1w5lq" path="res://resources/sprites/units/knight_icon.tres" id="2_srbag"]
[ext_resource type="Texture2D" uid="uid://b5a2jao5ef4rq" path="res://resources/sprites/icons/monster_icon.png" id="4_7l1g7"]
[ext_resource type="Texture2D" uid="uid://b4x5dwqc4ap1w" path="res://resources/sprites/icons/Mounted_icon.png" id="5_ku7oi"]
[ext_resource type="Texture2D" uid="uid://blijlre1sii7l" path="res://resources/sprites/icons/flyer_icon.png" id="6_rqhlt"]
[ext_resource type="Texture2D" uid="uid://cqm5bfwkx8b3p" path="res://resources/sprites/icons/amor_icon.png" id="7_h637h"]
[ext_resource type="Texture2D" uid="uid://ots6mr21urrf" path="res://resources/sprites/icons/animal_icon.png" id="8_puxcf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lrs2d"]
shader = ExtResource("1_15lrg")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/color_factor = null
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[node name="CombatUnitPanel" type="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -22.0
offset_right = 334.0
offset_bottom = 23.0
grow_vertical = 2
script = ExtResource("1_q1fof")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -22.5
offset_right = 220.0
offset_bottom = 22.5
grow_vertical = 2
theme = ExtResource("1_de343")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="UnitIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_lrs2d")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_srbag")

[node name="UnitName" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Example Unit Name"

[node name="IconContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="calvaryIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 14)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_ku7oi")

[node name="monsterIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 14)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_7l1g7")

[node name="flyerIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 14)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_rqhlt")

[node name="armorIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 14)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("7_h637h")

[node name="animalIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/IconContainer"]
custom_minimum_size = Vector2(16, 14)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("8_puxcf")
